# tanmatsu-graceloader

./: .gitignore  .gitmodules  Makefile
components/kbelf/: CMakeLists.txt
components/kbelf/src/: kbelf_lib_all.c
main/: CMakeLists.txt  exported_symbols.cmake  exported_symbols.ld  idf_component.yml  main.c  symbol_export.sh
main/symbol_export/: all
metadata/: metadata.json
tools/: extract-symbols.sh  update-template.sh
